fix z-index on action choice

--- a/lumen.css
+++ b/lumen.css
@@ -701,9 +701,6 @@ body > .card {
 #map .battlefield {
   z-index: 2;
 }
-#map .battlefield.temp-z-index {
-  z-index: 3;
-}
 #map .battlefield .territory {
   position: absolute;
   transform-origin: center center;
@@ -836,14 +833,16 @@ body > .card {
   display: grid;
   grid-template-columns: 1fr 30px 1fr;
   gap: 10px;
-  bottom: -30px;
   width: 200px;
   height: 30px;
-  left: -60px;
   border-radius: 10px;
   box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.4);
   z-index: 20;
+  transform-origin: top center;
   transform: scale(calc(1 / var(--cumulative-scale)));
+}
+#map #fighter-choice.upper {
+  transform-origin: bottom center;
 }
 #map #fighter-choice button {
   background: white;
